--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ROGERTERRILL/RASPBERRYPI-binkyfoodmachine#readme",
   "dependencies": {
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "onoff": "^5.0.1"
   }
