--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "lcd": "^3.0.0",
+    "moment": "^2.24.0",
     "onoff": "^5.0.1"
   }
 }
